09-Nov-2015 The macro 'OutputName' is now available on all modules. It defaults to the module's name.

09-Nov-2015 Preliminary support for VisualStudio 2015 (Community Edition); see package VisualC-14.0.

09-Nov-2015 Removed Bam.Core.EConfiguration.Final. Existing configurations are debug (full debugging), optimized (no symbols, full optimizations), profile (debug symbols, full optimizations - useful for generating installers while hiving off debug symbols).

09-Nov-2015 Renamed Publisher.Collation.PublishingRoot PathKey to Publisher.Collation.Key (for consistency with other modules).

09-Nov-2015 Added new test, InstallerTest1, to exercise generating installers for all platforms.

09-Nov-2015 Renamed Bam.Core.FileKey to Bam.Core.PathKey, as it is being used for more than just files now.

09-Nov-2015 Updated Bam schema, so that BamAssemblies can use a major, minor, patch attribute, to specify the minimum version supported.

07-Nov-2015 Fixes #52. Nullable fields in Convert functions of settings interfaces are now tested consistently (with .HasValue & .Value properties). Only C compiler interfaces use nullable types, as only these need to calculate common and delta settings.

07-Nov-2015 Fixes #51. Removed legacy Mono package assembly compilation flags.

06-Nov-2015 Fixes #48. Removed Bam.Core.Module argument from CommandLineProcessor.IConvertToCommandLine.Convert, as its use is not always required, and if needed, can be found from the Bam.Core.Settings object on which this interface is applied.

06-Nov-2015 Fixes #49. Added Bam.Core.ConfigurationFilterAttribute, applied to module classes, to indicate whether a module should be built in the current configurations.

06-Nov-2015 Fixes #50. Moved deleting the build root (if the command line specifies it) before package compilation, so that the cached assembly remains on disk after the build. This was stopping the assembly being reused.

06-Nov-2015 Renamed C.ExternalFramework to C.OSXFramework.
